objects/LBI__LatticeDisqualificationReason__c.object
<CustomObject>
    <description>Used in the various recommendation pages to build the picklist of disqualification reasons.</description>
    <fields>
        <fullName>LBI__LatticeApplicationRegion__c</fullName>
        <label>Lattice Application/Region</label>
        <referenceTo>LBI__LatticeApplicationRegion__c</referenceTo>
        <relationshipLabel>Lattice Disqualification Reasons</relationshipLabel>
        <relationshipName>LatticeDisqualificationReasons</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LBI__LatticeValue__c</fullName>
        <description>Value to be sent to Lattice servers (DEPRECATED)</description>
        <inlineHelpText>Value to be sent to Lattice servers</inlineHelpText>
        <label>Lattice Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__ReasonName__c</fullName>
        <description>Name of the reason, to be displayed on the screen</description>
        <inlineHelpText>Name of the reason, to be displayed on the screen</inlineHelpText>
        <label>Reason Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__RequiredInfoOptional__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the Required Information Optional? (It is mandatory unless this option is selected)</description>
        <inlineHelpText>Is the Required Information Optional? (It is mandatory unless this option is selected)</inlineHelpText>
        <label>Required Info Optional?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__RequiresMoreInformation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the &apos;More Information&quot; textbox needed for this reason?</description>
        <inlineHelpText>Is the &apos;More Information&quot; textbox needed for this reason?</inlineHelpText>
        <label>Requires More Information?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__SortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Lattice Disqualification Reason</label>
    <nameField>
        <displayFormat>LDR-{000000}</displayFormat>
        <label>Lattice Disqualification Reason Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lattice Disqualification Reasons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>